tests/lean/leak1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
leak1.lean:1:11: error: unknown identifier 'a'
