tests/lean/leak1.lean
print 2 * a